...
    <string name="item_data_sensor_name">SENSOR 1</string>
    <string name="item_data_sensor_condition">Condition</string>
    <string name="item_data_sensor_temperature">Temperature</string>
    <string name="item_data_sensor_description">Description</string>

    <string name="menu_main_log_out">Log Out</string>
    <string name="menu_main_account_details">Account details</string>
    <string name="menu_main_about_app">About App</string>

    <string name="fab_description">Add new sensor</string>

    <string name="dialog_create_title">Add a new sensor</string>
    <string name="dialog_create_et_hint_sensor_name">Name</string>
    <string name="dialog_create_et_hint_sensor_description">Description</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_create">Create</string>


    <string name="user_account_title">User Account Information</string>
    <string name="user_account_id_title">User Id:</string>
    <string name="user_account_btn_update">Update</string>
    <string name="user_account_btn_delete">Delete Account</string>
    <string name="user_account_btn_copy">Copy ID</string>
    <string name="user_account_dialog_delete_msg">Are your sure to delete this account?</string>
    <string name="user_account_dialog_delete_positive_button">Delete</string>

    <string name="sensor_data_title">Sensor Data</string>
    <string name="sensor_data_id_title">Sensor Id</string>
    <string name="sensor_data_btn_update">Update</string>
    <string name="sensor_data_btn_delete">Delete Sensor</string>
...


    <string name="toast_error_empty_fields">Please fill all required fields</string>
    <string name="toast_reg_success">Registration is successful</string>
    <string name="toast_reg_failed">Failed to register. Try again.</string>
    <string name="toast_reset_success">Password send to your email</string>
    <string name="toast_login_success">Login is successful</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="toast_dialog_empty_sensor_name">Please try again and give your sensor a name</string>
    <string name="toast_dialog_delete_success">Account Deleted</string>
    <string name="toast_menu_log_out">Logged Out</string>
    <string name="toast_update_success">User details updated</string>
    <string name="toast_update_failed">Something is wrong</string>
    <string name="toast_copy_id_success">User Id successfully copied</string>
    <string name="toast_sensor_data_copy_id_success">Sensor Id successfully copied</string>
    <string name="toast_sensor_data_set_watering_slider_success_1">"Watering duration successfully sets for "</string>
    <string name="toast_sensor_data_set_watering_slider_success_2">" sec"</string>
    <string name="toast_sensor_data_set_sleep_mode_slider_success_1">"Sleep Mode for sensor successfully sets for "</string>
    <string name="toast_sensor_data_set_sleep_mode_slider_success_2">" min"</string>
    <string name="toast_sensor_data_set_slider_failed">Something is wrong. Setting impossible</string>
...
