...
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/user_account_btn_copy"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_account_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_account_btn_copy"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_account_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_account_et_name"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="textEmailAddress"
...
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:cornerRadius="15dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_account_btn_delete_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_account_btn_update"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
...
